--- a/site/assets/images/favicon/manifest.json
+++ b/site/assets/images/favicon/manifest.json
@@ -8,7 +8,7 @@
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#f1f5f9",
-  "theme_color": "#249E94",
+  "theme_color": "#ffffff",
   "icons": [
     {
       "src": "android-icon-36x36.png",
